mon-site/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mon-site
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mon-site
  template:
    metadata:
      labels:
        app: mon-site
    spec:
      containers:
        - name: mon-site
          image: monsite:latest
          ports:
            - containerPort: 80
