mon-site/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mon-site
spec:
  selector:
    app: mon-site
  ports:
    - port: 80
      targetPort: 80
      name: http
    - port: 443
      targetPort: 443
      name: https
  type: ClusterIP
