mon-site/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mon-site
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  tls:
    - hosts:
        - mon-site.local
      secretName: mon-site-tls
  rules:
    - host: mon-site.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mon-site
                port:
                  number: 80
